fixed size issue homepage and position mobile menu

--- a/src/css/base/components/_header.scss
+++ b/src/css/base/components/_header.scss
@@ -83,7 +83,7 @@ header {
         justify-content: space-evenly;
         align-items: center;
         height: 90vh;
-        top: 7rem;
+        top: 6rem;
         left: -100%;
         transition: all 500ms ease-in-out;
         &--active {
